@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1-80
-Date: 2009-10-27
+Date: 2009-11-01
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
