@@ -1,5 +1,6 @@
 0.1-80
 - fix issue 49 [demo(TS) broken]
+- add sun.angle [not tested yet; will be reformulated in R from up-to-date formulae]
 0.1-79
 - fix issue 48 [oce.plot.sticks() ignored page ratio]
 - fix issue 47 [cannot read new MEDS sealevel format]
